theme/style.less
/* Import all components */
@import 'pxtsemantic';
@import 'pxt';
@import 'themepacks';
@import 'blockly-toolbox';
@import 'themes/default/globals/site.variables';
@import 'themes/pxt/globals/site.variables';
@import 'site/globals/site.variables';

/* Reference import */
@import (reference) "semantic.less";

/*******************************
    Add your custom CSS here
*******************************/

/* Roboto font */
@RobotoFont: data-uri("../docs/static/fonts/Roboto_400_normal.woff");

@font-face  {
    font-family: 'Roboto';
    src: @RobotoFont format("woff");
}

:root, .pxt-theme-root {
    --pxt-page-font: @pageFont;
}

.ui.button.download-button {
    background-color: var(--pxt-primary-background);
    color: var(--pxt-primary-foreground);
}

.ui.button.hw-button {
    background-color: var(--pxt-primary-accent) !important;
    color: var(--pxt-primary-foreground) !important;
}

.docs.inlinebutton.ui.button.download-button:hover {
    background-color: var(--pxt-primary-background);
    color: var(--pxt-primary-foreground);
}

#editortools .ui.button.editortools-btn, .simtoolbar .ui.button.icon {
    background-color: var(--pxt-secondary-background);
    color: var(--pxt-secondary-foreground);

    &:hover {
        filter: none;
        background-color: var(--pxt-secondary-background-hover);
        color: var(--pxt-secondary-foreground-hover);
    }
}

#simulator .ui.button.play-button .icon.play {
    color: var(--pxt-secondary-foreground) !important;
}

#downloadArea {
    background: transparent !important;
}

#homescreen .ui.home {
    .detailview .actions .card-action {
        .button.approve {
            background-color: @mainMenuTutorialBackground;
        }
    }
    .tutorial-progress.orange {
        background-color: @mainMenuTutorialBackground !important;
        border-color: @mainMenuTutorialBackground !important;
    }
}

/* Prevent project card timestamp from overflowing the card boundary on narrow screens (e.g., iPad portrait) */
.ui.card.file .meta {
    overflow: hidden;
}

#tutorialcard {
    .ui.button.orange.right.attached {
        background-color: @mainMenuTutorialBackground;
        &:focus, &:hover {
            background-color: darken(@mainMenuTutorialBackground, 20%);
        }
    }
}

.time-machine-header {
    background-color: @blue;
}

.time-machine-preview {
    // Loading div that appears while projects are importing
    & > div {
        background: #e8e8e8
    }
}

#root:not(.hc) .tutorial-menu {
    .ui.circular.label.selected {
        background-color: @purple !important;
        color: #e8e8e8 !important;
        border: 1px solid #e8e8e8 !important;

        &:focus, &:hover {
            background-color: darken(@purple, 20%) !important;
        }
    }
}

.menubar {
    .ui.menu .brand .ui.logo {
        height: 1.1rem;
    }
}

.sound-effect-header {
    background-color: rgb(230, 48, 34); // Match block color
}


.ui.black.microbit-ribbon.label {
    position: absolute;
    border-radius: 0;
    margin: 0;
    right: 0;
    width: 45%;
    height: 25%;
    &::before {
        content: url('data:image/svg+xml,<svg width="196" height="35" viewBox="0 0 196 35" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_9_7)"><path d="M38.3493 21.4738C36.6723 21.4738 35.3143 20.1098 35.3143 18.4318C35.3143 16.7538 36.6713 15.3938 38.3493 15.3938C40.0333 15.3938 41.3883 16.7538 41.3883 18.4318C41.3883 20.1098 40.0333 21.4738 38.3493 21.4738ZM16.0383 15.3968C14.3613 15.3968 12.9963 16.7538 12.9963 18.4318C12.9963 20.1098 14.3593 21.4738 16.0383 21.4738C17.7123 21.4738 19.0743 20.1098 19.0743 18.4318C19.0743 16.7538 17.7113 15.3968 16.0383 15.3968ZM16.0353 9.40675H38.6113C43.5903 9.40675 47.6383 13.4538 47.6383 18.4338C47.6383 23.4128 43.5893 27.4648 38.6113 27.4648H16.0353C11.0583 27.4648 7.00534 23.4118 7.00534 18.4338C7.00434 13.4538 11.0583 9.40675 16.0353 9.40675ZM38.6113 33.4828C46.9103 33.4828 53.6583 26.7328 53.6583 18.4338C53.6583 10.1348 46.9103 3.38275 38.6113 3.38275H16.0353C7.73634 3.38275 0.986343 10.1348 0.986343 18.4338C0.986343 26.7328 7.73634 33.4828 16.0353 33.4828H38.6113ZM150.71 11.5298C150.71 10.0768 149.515 8.89675 148.048 8.89675C146.593 8.89675 145.409 10.0768 145.409 11.5298C145.409 13.0008 146.593 14.2018 148.048 14.2018C149.514 14.2018 150.71 12.9998 150.71 11.5298ZM83.9243 16.9748C83.9243 12.2108 81.0313 8.88175 76.8933 8.88175C74.8663 8.88175 73.0793 9.73275 71.6703 11.3518C70.2033 9.69075 68.5183 8.88175 66.5433 8.88175C62.3813 8.88175 59.4773 12.2108 59.4773 16.9748V27.4408H63.2893V16.7968C63.2893 14.3808 64.6253 12.6928 66.5433 12.6928C68.1603 12.6928 69.7933 14.1018 69.7933 16.7968V27.4418H73.6413V16.7968C73.6413 14.3808 74.9793 12.6928 76.8933 12.6928C78.7563 12.6928 80.1103 14.4198 80.1103 16.7968V27.4418H83.9243V16.9748ZM90.8773 9.34275H87.0313V27.4418H90.8773V9.34275ZM91.4463 4.21475C91.4463 2.83775 90.3503 1.76075 88.9543 1.76075C87.5543 1.76075 86.5013 2.81475 86.5013 4.21475C86.5013 5.61275 87.5793 6.70875 88.9543 6.70875C90.3293 6.70875 91.4463 5.59175 91.4463 4.21475ZM109.774 25.1288L110.35 24.6078L107.522 21.9498L107.034 22.4048C105.782 23.5538 104.53 24.0908 103.089 24.0908C100.025 24.0908 97.5323 21.5338 97.5323 18.3918C97.5323 15.2708 100.024 12.7318 103.089 12.7318C104.521 12.7318 105.735 13.2528 107.038 14.4248L107.55 14.8848L110.298 12.0828L109.808 11.5808C108.054 9.78775 105.792 8.88475 103.089 8.88475C100.63 8.88475 98.2203 9.90675 96.4843 11.6828C94.7463 13.4168 93.7933 15.8018 93.7933 18.3918C93.7933 20.9878 94.7463 23.3708 96.4773 25.0968C98.2483 26.9078 100.594 27.9078 103.092 27.9078C105.493 27.9048 107.739 26.9708 109.774 25.1288ZM117.024 18.1818C117.024 14.8598 118.169 13.4958 121.241 13.1528L121.882 13.0828V9.28575L121.105 9.34375C115.476 9.80175 112.962 12.5908 112.962 18.3918V27.4428H117.024V18.1818ZM139.022 25.1048C140.784 23.3488 141.751 20.9588 141.751 18.3898C141.751 15.8248 140.784 13.4388 139.028 11.6878C137.258 9.87875 134.923 8.88175 132.452 8.88175C129.96 8.88175 127.612 9.87875 125.839 11.6878C124.087 13.4798 123.118 15.8618 123.118 18.3898C123.118 20.9198 124.087 23.3058 125.839 25.0968C127.61 26.9068 129.96 27.9048 132.452 27.9048C134.924 27.9048 137.26 26.9068 139.022 25.1048ZM137.793 18.3908C137.793 21.5708 135.432 24.0558 132.416 24.0558C129.471 24.0558 127.07 21.5148 127.07 18.3908C127.07 15.2538 129.468 12.6958 132.416 12.6958C135.379 12.6938 137.793 15.2538 137.793 18.3908ZM150.71 24.8088C150.71 23.3408 149.515 22.1418 148.048 22.1418C146.593 22.1418 145.409 23.3408 145.409 24.8088C145.409 26.2618 146.593 27.4408 148.048 27.4408C149.514 27.4408 150.71 26.2618 150.71 24.8088ZM170.217 25.1048C171.977 23.3488 172.947 20.9588 172.947 18.3898C172.947 15.8618 171.974 13.4788 170.218 11.6878C168.472 9.90075 166.138 8.91775 163.644 8.91775C161.609 8.91775 159.804 9.48975 158.16 10.6618V0.727753H154.344L154.352 16.3098C154.315 16.7208 154.315 17.1308 154.315 17.5078C154.315 23.6268 158.151 27.9038 163.645 27.9038C166.12 27.9048 168.452 26.9068 170.217 25.1048ZM169.204 18.4278C169.204 21.5508 166.71 24.0878 163.645 24.0878C160.53 24.0878 158.088 21.6038 158.088 18.4278C158.088 15.2848 160.582 12.7298 163.645 12.7298C166.71 12.7298 169.204 15.2858 169.204 18.4278ZM180.085 9.34275H176.239V27.4418H180.085V9.34275ZM180.657 4.21475C180.657 2.83775 179.559 1.76075 178.165 1.76075C176.765 1.76075 175.708 2.81475 175.708 4.21475C175.708 5.61275 176.784 6.70875 178.165 6.70875C179.538 6.70875 180.657 5.59175 180.657 4.21475ZM194.487 23.9738L193.868 23.8848C191.013 23.4758 189.735 21.7808 189.735 18.3898V13.2638H194.487V9.58975H189.735V5.58375H185.848V9.58975H184.186V13.2638H185.848V17.7888C185.848 24.0038 187.961 26.7208 193.631 27.8178L194.486 27.9818L194.487 23.9738Z" fill="white"/></g><defs><clipPath id="clip0_9_7"><rect width="195.474" height="34.2105" fill="white"/></clipPath></defs></svg>');
        position: absolute;
        left: 0;
        top: 0;
        right: 0;
        bottom: 0;
        display: flex;
        align-items: center;
        justify-content: center;
        transform: scale(0.55);
    }
}

/* Mobile */
@media only screen and (max-width: @largestMobileScreen) {
    #filelist {
        background: transparent !important;
    }
    #blocklySearchArea {
        display: none !important;
    }
    .ui.black.microbit-ribbon.label {
        width: 50%;
        height: 25%;
        &::before {
            transform: scale(0.40);
        }
    }
}

/* Tablet */
@media only screen and (min-width: @tabletBreakpoint) and (max-width: @largestTabletScreen) {
    #filelist {
        background: transparent !important;
    }
    .ui.black.microbit-ribbon.label {
        width: 55%;
        height: 20%;
        &::before {
            transform: scale(0.45);
        }
    }
}

/* Small Monitor */
@media only screen and (min-width: @computerBreakpoint) and (max-width: @largestSmallMonitor) {
}

/* Large Monitor */
@media only screen and (min-width: @largeMonitorBreakpoint) {
}


/* Download dialog */
.ui.downloaddialog.modal>.content {
    padding: 1rem;
}

.ui.webusbpair, .ui.upload {
    .firmware {
        background-color: #FFFFCE;
        div.image {
            justify-content: center;
            display: flex;
            padding: 1rem;

            img {
                height:100px;
            }
        }
    }
    .instructions {
        img {
            margin-bottom:1rem;
        }
    }
}

